DuPont DevSB/src/objects/ob1__Output_History__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ob1__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is this report approved for sending? (Only utilized If this template requires an approval process)</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ob1__Attachment_Message__c</fullName>
        <label>Attachment Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ob1__BCC__c</fullName>
        <label>BCC</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ob1__CC__c</fullName>
        <label>CC</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ob1__Content_Type__c</fullName>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Object_ID__c</fullName>
        <label>Object ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Reply_To__c</fullName>
        <label>Reply To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Resend_To__c</fullName>
        <label>Resend To</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ob1__Resend__c</fullName>
        <formula>HYPERLINK(&quot;/apex/ob1__OutputHistory?id=&quot; + ob1__Object_ID__c + &quot;&amp;class=&quot; + ob1__Template_Class__c + &quot;&amp;output_id=&quot; + Id + &quot;&amp;display=RS&quot;,&quot;Resend&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Sender_Display_Name__c</fullName>
        <label>Sender Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Subject__c</fullName>
        <label>Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ob1__Template_Class__c</fullName>
        <label>Template Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Template_Name__c</fullName>
        <label>Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__To__c</fullName>
        <label>To</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ob1__Use_Intelligent_Email_Limit_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Intelligent Email Limit Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ob1__View__c</fullName>
        <formula>HYPERLINK(&quot;/apex/ob1__output?output_id=&quot; + Id,&quot;View&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Output History</label>
    <nameField>
        <displayFormat>OH-{0}</displayFormat>
        <label>Output History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Output Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>